Added start of a GUI.